// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Notifications/Inline Default 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-",
        " border-",
        " alert-dismissible d-flex justify-content-between align-items-center \\"
        role=\\"alert\\"
      >

          <div class=\\"d-flex\\">

          ",
        "
          <div class=\\"ms-2\\">
          <span>
            <strong class=\\"text-",
        "\\">",
        "</strong>
            <span class=\\"text-black text-break\\"> ",
        "</span>
            <span class=\\"ps-2\\">
              ",
        "
            </span>
            <span class=\\"ps-2 \\">
              ",
        "
            </span>
            </span>
            </div>
          </div>
 ",
        "
         
        </div>
      </div>
  ",
      ],
      "values": Array [
        "danger",
        "danger",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons \\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "danger",
        "Error!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
        null,
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <button
         type=\\"button\\"
         class=\\"btn-close\\"
         data-bs-dismiss=\\"alert\\"
         aria-label=\\"Close\\"
       ></button>",
          ],
          "values": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Inline Info 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-",
        " border-",
        " alert-dismissible d-flex justify-content-between align-items-center \\"
        role=\\"alert\\"
      >

          <div class=\\"d-flex\\">

          ",
        "
          <div class=\\"ms-2\\">
          <span>
            <strong class=\\"text-",
        "\\">",
        "</strong>
            <span class=\\"text-black text-break\\"> ",
        "</span>
            <span class=\\"ps-2\\">
              ",
        "
            </span>
            <span class=\\"ps-2 \\">
              ",
        "
            </span>
            </span>
            </div>
          </div>
 ",
        "
         
        </div>
      </div>
  ",
      ],
      "values": Array [
        "info",
        "info",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons \\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "info",
        "Info!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
        null,
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <button
         type=\\"button\\"
         class=\\"btn-close\\"
         data-bs-dismiss=\\"alert\\"
         aria-label=\\"Close\\"
       ></button>",
          ],
          "values": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Inline Success 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-",
        " border-",
        " alert-dismissible d-flex justify-content-between align-items-center \\"
        role=\\"alert\\"
      >

          <div class=\\"d-flex\\">

          ",
        "
          <div class=\\"ms-2\\">
          <span>
            <strong class=\\"text-",
        "\\">",
        "</strong>
            <span class=\\"text-black text-break\\"> ",
        "</span>
            <span class=\\"ps-2\\">
              ",
        "
            </span>
            <span class=\\"ps-2 \\">
              ",
        "
            </span>
            </span>
            </div>
          </div>
 ",
        "
         
        </div>
      </div>
  ",
      ],
      "values": Array [
        "success",
        "success",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons \\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "success",
        "Success!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
        null,
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <button
         type=\\"button\\"
         class=\\"btn-close\\"
         data-bs-dismiss=\\"alert\\"
         aria-label=\\"Close\\"
       ></button>",
          ],
          "values": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Inline Two Actions 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-",
        " border-",
        " alert-dismissible d-flex justify-content-between align-items-center \\"
        role=\\"alert\\"
      >

          <div class=\\"d-flex\\">

          ",
        "
          <div class=\\"ms-2\\">
          <span>
            <strong class=\\"text-",
        "\\">",
        "</strong>
            <span class=\\"text-black text-break\\"> ",
        "</span>
            <span class=\\"ps-2\\">
              ",
        "
            </span>
            <span class=\\"ps-2 \\">
              ",
        "
            </span>
            </span>
            </div>
          </div>
 ",
        "
         
        </div>
      </div>
  ",
      ],
      "values": Array [
        "danger",
        "danger",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons \\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "danger",
        "Error!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        Object {
          "_$litType$": 1,
          "strings": Array [
            "<a href=",
            " target=",
            ">",
            "</a>",
          ],
          "values": Array [
            "https://app.zeplin.io/project/62902a463701ffb0e532df2b/screen/6303d21f83d705123f9ece5b",
            "_self",
            "Link Action",
          ],
        },
        Object {
          "_$litType$": 1,
          "strings": Array [
            "<a href=",
            " target=",
            ">",
            "</a>",
          ],
          "values": Array [
            "https://app.zeplin.io/project/62902a463701ffb0e532df2b/screen/6303d21f83d705123f9ece5b",
            "_self",
            "Link Action",
          ],
        },
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <button
         type=\\"button\\"
         class=\\"btn-close\\"
         data-bs-dismiss=\\"alert\\"
         aria-label=\\"Close\\"
       ></button>",
          ],
          "values": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Inline Warning 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-",
        " border-",
        " alert-dismissible d-flex justify-content-between align-items-center \\"
        role=\\"alert\\"
      >

          <div class=\\"d-flex\\">

          ",
        "
          <div class=\\"ms-2\\">
          <span>
            <strong class=\\"text-",
        "\\">",
        "</strong>
            <span class=\\"text-black text-break\\"> ",
        "</span>
            <span class=\\"ps-2\\">
              ",
        "
            </span>
            <span class=\\"ps-2 \\">
              ",
        "
            </span>
            </span>
            </div>
          </div>
 ",
        "
         
        </div>
      </div>
  ",
      ],
      "values": Array [
        "warning",
        "warning",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons \\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "warning",
        "Warning!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
        null,
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <button
         type=\\"button\\"
         class=\\"btn-close\\"
         data-bs-dismiss=\\"alert\\"
         aria-label=\\"Close\\"
       ></button>",
          ],
          "values": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Inline With Action 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-",
        " border-",
        " alert-dismissible d-flex justify-content-between align-items-center \\"
        role=\\"alert\\"
      >

          <div class=\\"d-flex\\">

          ",
        "
          <div class=\\"ms-2\\">
          <span>
            <strong class=\\"text-",
        "\\">",
        "</strong>
            <span class=\\"text-black text-break\\"> ",
        "</span>
            <span class=\\"ps-2\\">
              ",
        "
            </span>
            <span class=\\"ps-2 \\">
              ",
        "
            </span>
            </span>
            </div>
          </div>
 ",
        "
         
        </div>
      </div>
  ",
      ],
      "values": Array [
        "danger",
        "danger",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons \\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "danger",
        "Error!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        Object {
          "_$litType$": 1,
          "strings": Array [
            "<a href=",
            " target=",
            ">",
            "</a>",
          ],
          "values": Array [
            "https://app.zeplin.io/project/62902a463701ffb0e532df2b/screen/6303d21f83d705123f9ece5b",
            "_self",
            "Link Action",
          ],
        },
        null,
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <button
         type=\\"button\\"
         class=\\"btn-close\\"
         data-bs-dismiss=\\"alert\\"
         aria-label=\\"Close\\"
       ></button>",
          ],
          "values": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Inline With No Dismissal 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-",
        " border-",
        " alert-dismissible d-flex justify-content-between align-items-center \\"
        role=\\"alert\\"
      >

          <div class=\\"d-flex\\">

          ",
        "
          <div class=\\"ms-2\\">
          <span>
            <strong class=\\"text-",
        "\\">",
        "</strong>
            <span class=\\"text-black text-break\\"> ",
        "</span>
            <span class=\\"ps-2\\">
              ",
        "
            </span>
            <span class=\\"ps-2 \\">
              ",
        "
            </span>
            </span>
            </div>
          </div>
 ",
        "
         
        </div>
      </div>
  ",
      ],
      "values": Array [
        "danger",
        "danger",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons \\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "danger",
        "Error!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
        null,
        null,
      ],
    },
  ],
}
`;
